@@ -4,5 +4,6 @@ module Baler
     autoload :Context, File.dirname(__FILE__) + '/remote/context'
     autoload :Mapping, File.dirname(__FILE__) + '/remote/mapping'
     autoload :Configuration, File.dirname(__FILE__) + '/remote/configuration'
+    autoload :GatherCondition, File.dirname(__FILE__) + '/remote/gather_condition'
   end
 end
