@@ -1,0 +1,19 @@
+module Baler
+  module Remote
+    class GatherCondition
+      def initialize(object, expected_value)
+        @object = object
+        @expected_value = !!(expected_value)
+      end
+
+      def passes?(instance)
+        !!(return_value(instance)) == @expected_value
+      end
+      
+      private
+        def return_value(instance)
+          @object.is_a?(Proc) ? @object.call(instance) : instance.method(@object).call
+        end
+    end
+  end
+end
